Update Tracking API documentation
