# tracking/tracking-set-active-route/index.js
@@ -5,6 +5,24 @@ var iotData = new AWS.IotData({region:process.env.AWS_REGION, endpoint:process.e
 Promise.promisifyAll(iotData);
 
 function setActiveRoute(principalId, activeRoute) {
+  if (!activeRoute.routeId) {
+    return Promise.reject(new Error('400 routeId is required'));
+  }
+  if (!activeRoute.timestamp) {
+    return Promise.reject(new Error('400 timestamp is required'));
+  }
+  if (!activeRoute.legs) {
+    return Promise.reject(new Error('400 legs are required'));
+  }
+  if (!activeRoute.activeLeg) {
+    return Promise.reject(new Error('400 activeLeg is required'));
+  }
+  if (!activeRoute.activeLeg.legId) {
+    return Promise.reject(new Error('400 activeLeg.legId is required'));
+  }
+  if (!activeRoute.activeLeg.timestamp) {
+    return Promise.reject(new Error('400 activeLeg.timestamp is required'));
+  }
   console.log('Activating user', principalId, 'route', activeRoute);
   var thingName = principalId.replace(/:/, '-');
   var payload = JSON.stringify({
